--- a/Documents/Visual Studio 2015/Projects/Felix_Riipen/Riipen_SSD/Riipen_SSD/Views/Admin/CreateContest.cshtml
+++ b/Documents/Visual Studio 2015/Projects/Felix_Riipen/Riipen_SSD/Riipen_SSD/Views/Admin/CreateContest.cshtml
@@ -42,7 +42,7 @@
         </div>
         <div class="date">
             <label for="date">Date</label>
-            <input type="text" class="form-control"name="Date" id="datepicker" />
+            <input type="text" class="form-control" name="StartTime" id="datepicker" />
         </div>
         <div class="location">
             <label for="location">Location</label>
