--- a/Documents/Visual Studio 2015/Projects/Felix_Riipen/Riipen_SSD/Riipen_SSD/Views/Judge/contest.cshtml
+++ b/Documents/Visual Studio 2015/Projects/Felix_Riipen/Riipen_SSD/Riipen_SSD/Views/Judge/contest.cshtml
@@ -64,12 +64,12 @@ else if (User.IsInRole("Admin"))
     <table>
         <thead>
             <tr>
-                <th>
+                @*<th>
                     @Html.DisplayNameFor(model => model.First().TeamID)
-                </th>
-                <th>
+                </th>*@
+                @*<th>
                     @Html.DisplayNameFor(model => model.First().ContestID)
-                </th>
+                </th>*@
                 <th>
                     @Html.DisplayNameFor(model => model.First().TeamName)
                 </th>
@@ -91,7 +91,7 @@ else if (User.IsInRole("Admin"))
                 </th>
                 @if (User.IsInRole("Judge"))
             {
-                    <th></th>
+                    <th>Your judgement</th>
                 }
 
             </tr>
@@ -100,12 +100,12 @@ else if (User.IsInRole("Admin"))
             @foreach (var item in Model)
             {
                 <tr>
-                    <td>
+                    @*<td>
                         @Html.DisplayFor(modelItem => item.TeamID)
                     </td>
                     <td>
                         @Html.DisplayFor(modelItem => item.ContestID)
-                    </td>
+                    </td>*@
                     <td>
                         @Html.DisplayFor(modelItem => item.TeamName)
                     </td>
