Can now send emails out to participants

--- a/Documents/Visual Studio 2015/Projects/Felix_Riipen/Riipen_SSD/Riipen_SSD/Views/Admin/ContestDetails.cshtml
+++ b/Documents/Visual Studio 2015/Projects/Felix_Riipen/Riipen_SSD/Riipen_SSD/Views/Admin/ContestDetails.cshtml
@@ -128,7 +128,9 @@
 
 @using (Html.BeginForm("SendEmails", "Admin", FormMethod.Post))
 {
+    
     @Html.AntiForgeryToken()
+    @Html.HiddenFor(x=>Model.ContestID)
     <button type="submit" class="btn btn-success">Publish Contest</button>
 }
    
