--- a/Documents/Visual Studio 2015/Projects/Felix_Riipen/Riipen_SSD/Riipen_SSD/Styles/JudgeContestResponsiveTable.css
+++ b/Documents/Visual Studio 2015/Projects/Felix_Riipen/Riipen_SSD/Riipen_SSD/Styles/JudgeContestResponsiveTable.css
@@ -57,12 +57,11 @@ td, th {
             padding-right: 10px;
             white-space: nowrap;
         }
-    td:nth-of-type(1):before { content: "Team ID"; }
-	td:nth-of-type(2):before { content: "Contest ID"; }
-	td:nth-of-type(3):before { content: "Team Name"; }
-	td:nth-of-type(4):before { content: "Your Current Score"; }
-	td:nth-of-type(5):before { content: "Final Score"; }
-	td:nth-of-type(6):before { content: "Judge Not Submitted"; }
+}
+	td:nth-of-type(1):before { content: "Team Name"; }
+	td:nth-of-type(2):before { content: "Your Current Score"; }
+	td:nth-of-type(3):before { content: "Final Score"; }
+	td:nth-of-type(4):before { content: "Judge Not Submitted"; }
 
 
 }
