style creatContst button in admin view

--- a/Documents/Visual Studio 2015/Projects/Felix_Riipen/Riipen_SSD/Riipen_SSD/Content/Site.css
+++ b/Documents/Visual Studio 2015/Projects/Felix_Riipen/Riipen_SSD/Riipen_SSD/Content/Site.css
@@ -61,6 +61,23 @@ h2 {
 }
 
 
+.create-contest-btn{
+
+    margin-top:20px;
+}
+
+.search-input-admin{
+    width:200px;
+    display:inline-block;
+    padding:6px;
+}
+
+
+.PageDiv{
+    margin-top:20px;
+
+}
+
 
 
 
