--- a/Documents/Visual Studio 2015/Projects/Felix_Riipen/Riipen_SSD/Riipen_SSD/Views/Participant/Contests.cshtml
+++ b/Documents/Visual Studio 2015/Projects/Felix_Riipen/Riipen_SSD/Riipen_SSD/Views/Participant/Contests.cshtml
@@ -1,4 +1,6 @@
-﻿@model IEnumerable<Riipen_SSD.ViewModels.ParticipantViewModels.ContestTeamVM>
+﻿@*@model IEnumerable<Riipen_SSD.ViewModels.ParticipantViewModels.ContestTeamVM>*@
+@model PagedList.IPagedList<Riipen_SSD.ViewModels.ParticipantViewModels.ContestTeamVM>
+@using PagedList.Mvc;
 
 @{
     ViewBag.Title = "Contests";
@@ -57,13 +59,13 @@
                     @Html.DisplayNameFor(model => model.TeamID)
                 </th>*@
                 <th>
-                    @Html.DisplayNameFor(model => model.TeamName)
+                    @Html.DisplayNameFor(model => model.First().TeamName)
                 </th>
                 <th>
-                    @Html.DisplayNameFor(model => model.Score)
+                    @Html.DisplayNameFor(model => model.First().Score)
                 </th>
                 <th>
-                    @Html.DisplayNameFor(model => model.JudgeNotSubmitted)
+                    @Html.DisplayNameFor(model => model.First().JudgeNotSubmitted)
                 </th>
 
             </tr>
@@ -103,4 +105,11 @@
             }
         </tbody>
     </table>
+
+    <div class="PageDiv">
+        <div style="float: right;">Page @(Model.PageCount < Model.PageNumber ? 0 : Model.PageNumber) of @Model.PageCount</div>
+        @Html.PagedListPager(Model, page => Url.Action("Contests",
+        new { page, contestID= ViewBag.ContestID,searchATeam = ViewBag.searchATeam, sortTeam = ViewBag.sortTeams }))
+    </div>
+
     </div>
