--- a/Documents/Visual Studio 2015/Projects/Felix_Riipen/Riipen_SSD/Riipen_SSD/Views/Participant/Index.cshtml
+++ b/Documents/Visual Studio 2015/Projects/Felix_Riipen/Riipen_SSD/Riipen_SSD/Views/Participant/Index.cshtml
@@ -1,4 +1,6 @@
-﻿@model IEnumerable<Riipen_SSD.ViewModels.ParticipantViewModels.ParticipantContestVM>
+﻿@*@model IEnumerable<Riipen_SSD.ViewModels.ParticipantViewModels.ParticipantContestVM>*@
+@model PagedList.IPagedList<Riipen_SSD.ViewModels.ParticipantViewModels.ParticipantContestVM>
+@using PagedList.Mvc;
 
 @{
     ViewBag.Title = "Index";
@@ -50,13 +52,13 @@
                     @Html.DisplayNameFor(model => model.ContestID)
                 </th>*@
                 <th>
-                    @Html.DisplayNameFor(model => model.ContestName)
+                    @Html.DisplayNameFor(model => model.First().ContestName)
                 </th>
                 <th>
-                    @Html.DisplayNameFor(model => model.StartTime)
+                    @Html.DisplayNameFor(model => model.First().StartTime)
                 </th>
                 <th>
-                    @Html.DisplayNameFor(model => model.Location)
+                    @Html.DisplayNameFor(model => model.First().Location)
                 </th>
 
             </tr>
@@ -85,4 +87,13 @@
             }
         </tbody>
     </table>
+    <div class="PageDiv">
+
+        <div style="float: right;">Page @(Model.PageCount < Model.PageNumber ? 0 : Model.PageNumber) of @Model.PageCount</div>
+        @Html.PagedListPager(Model, page => Url.Action("Index",
+new { page, searchAContest = ViewBag.searchAContest, sortContests = ViewBag.sortContests }))
     </div>
+
+
+    </div>
+
