--- a/Documents/Visual Studio 2015/Projects/Felix_Riipen/Riipen_SSD/Riipen_SSD/Views/Participant/Contests.cshtml
+++ b/Documents/Visual Studio 2015/Projects/Felix_Riipen/Riipen_SSD/Riipen_SSD/Views/Participant/Contests.cshtml
@@ -1,5 +1,4 @@
-﻿@*@model IEnumerable<Riipen_SSD.ViewModels.ParticipantViewModels.ContestTeamVM>*@
-@model PagedList.IPagedList<Riipen_SSD.ViewModels.ParticipantViewModels.ContestTeamVM>
+﻿@model PagedList.IPagedList<Riipen_SSD.ViewModels.ParticipantViewModels.ContestTeamVM>
 @using PagedList.Mvc;
 
 @{
@@ -55,9 +54,6 @@
     <table class="participant-contest-table">
         <thead>
             <tr>
-                @*<th>
-                    @Html.DisplayNameFor(model => model.TeamID)
-                </th>*@
                 <th>
                     @Html.DisplayNameFor(model => model.First().TeamName)
                 </th>
@@ -74,9 +70,6 @@
             @foreach (var item in Model)
             {
                 <tr>
-                    @*<td>
-                        @Html.DisplayFor(modelItem => item.TeamID)
-                    </td>*@
                     <td>
                         @Html.ActionLink(item.TeamName, "TeamScores", new { teamID = item.TeamID, contestID = ViewBag.ContestID, yourTeamID = ViewBag.YourTeamID, totalScore=item.Score })
                     </td>
