--- a/Documents/Visual Studio 2015/Projects/Felix_Riipen/Riipen_SSD/Riipen_SSD/Views/Participant/Index.cshtml
+++ b/Documents/Visual Studio 2015/Projects/Felix_Riipen/Riipen_SSD/Riipen_SSD/Views/Participant/Index.cshtml
@@ -1,5 +1,4 @@
-﻿@*@model IEnumerable<Riipen_SSD.ViewModels.ParticipantViewModels.ParticipantContestVM>*@
-@model PagedList.IPagedList<Riipen_SSD.ViewModels.ParticipantViewModels.ParticipantContestVM>
+﻿@model PagedList.IPagedList<Riipen_SSD.ViewModels.ParticipantViewModels.ParticipantContestVM>
 @using PagedList.Mvc;
 
 @{
@@ -45,12 +44,6 @@
     <table>
         <thead>
             <tr>
-                @*<th>
-                    @Html.DisplayNameFor(model => model.TeamID)
-                </th>*@
-                @*<th>
-                    @Html.DisplayNameFor(model => model.ContestID)
-                </th>*@
                 <th>
                     @Html.DisplayNameFor(model => model.First().ContestName)
                 </th>
@@ -67,12 +60,6 @@
             @foreach (var item in Model)
             {
                 <tr>
-                    @*<td>
-                        @Html.DisplayFor(modelItem => item.TeamID)
-                    </td>*@
-                    @*<td>
-                        @Html.DisplayFor(modelItem => item.ContestID)
-                    </td>*@
                     <td>
 
                         @Html.ActionLink(item.ContestName, "Contests", new { contestID = item.ContestID })
@@ -89,9 +76,9 @@
     </table>
     <div class="PageDiv">
 
-        <div style="float: right;">Page @(Model.PageCount < Model.PageNumber ? 0 : Model.PageNumber) of @Model.PageCount</div>
+    <div style="float: right;">Page @(Model.PageCount < Model.PageNumber ? 0 : Model.PageNumber) of @Model.PageCount</div>
         @Html.PagedListPager(Model, page => Url.Action("Index",
-new { page, searchAContest = ViewBag.searchAContest, sortContests = ViewBag.sortContests }))
+        new { page, searchAContest = ViewBag.searchAContest, sortContests = ViewBag.sortContests }))
     </div>
 
 
