--- a/Documents/Visual Studio 2015/Projects/Felix_Riipen/Riipen_SSD/Riipen_SSD/Views/Admin/EditContest.cshtml
+++ b/Documents/Visual Studio 2015/Projects/Felix_Riipen/Riipen_SSD/Riipen_SSD/Views/Admin/EditContest.cshtml
@@ -24,7 +24,6 @@
     @Html.AntiForgeryToken()
 
     <div class="form-horizontal">
-        <h4>EditContestVM</h4>
         <hr />
         @Html.ValidationSummary(true, "", new { @class = "text-danger" })
 
@@ -63,11 +62,11 @@
                     <div class="multi-field criteria-list-item">
                         <input type="text" name="criteria[0].name" placeholder="New Criteria" value="@item.Name" />
                         <input type="text" name="criteria[0].description" placeholder="Criteria Description" value="@item.Description" />
-                        <button type="button" class="remove-field"> Remove </button>
+                        <button type="button" class="remove-field btn btn-warning"> Remove </button>
                     </div>
                 }
             </div>
-            <button type="button" class="add-criteria"> Add Criteria</button>
+            <button type="button" class="add-criteria btn btn-success"> Add Criteria</button>
         </div>
 
         <div class="form-group">
@@ -82,11 +81,11 @@
                         <input type="text" name="judges[0].firstname" placeholder="Judge First Name" value="@item.FirstName" />
                         <input type="text" name="judges[0].lastname" placeholder="Judge Last Name" value="@item.LastName" />
                         <input type="text" name="judges[0].email" placeholder="Judge Email" value="@item.Email" />
-                        <button type="button" class="judge-remove-field">Remove</button>
+                        <button type="button" class="judge-remove-field btn btn-warning">Remove</button>
                     </div>
                 }
             </div>
-            <button type="button" class="add-judge"> Add Judge</button>
+            <button type="button" class="add-judge btn btn-success"> Add Judge</button>
         </div>
 
 
@@ -136,13 +135,13 @@
 
         <div class="form-group">
             <div class="col-md-offset-2 col-md-10">
-                <input type="submit" value="Save" class="btn btn-default" />
+                <input type="submit" value="Save" class="btn btn-primary" />
             </div>
         </div>
     </div>
 }
 
 <div>
-    @Html.ActionLink("Back to List", "Index")
+    @Html.ActionLink("Back to List", "Index",null, new {@class="btn btn-info"})
 </div>
 
