--- a/Documents/Visual Studio 2015/Projects/Felix_Riipen/Riipen_SSD/Riipen_SSD/Views/Admin/ContestDetails.cshtml
+++ b/Documents/Visual Studio 2015/Projects/Felix_Riipen/Riipen_SSD/Riipen_SSD/Views/Admin/ContestDetails.cshtml
@@ -127,7 +127,7 @@
     
     @Html.AntiForgeryToken()
     @Html.HiddenFor(x=>Model.ContestID)
-    <button type="submit" class="btn btn-success">Publish Contest</button>
+    <button type="submit" class="btn btn-success publish-contest-btn">Publish Contest</button>
 }
    
 
