Styling in Admin section.

--- a/Documents/Visual Studio 2015/Projects/Felix_Riipen/Riipen_SSD/Riipen_SSD/Views/Admin/EditContest.cshtml
+++ b/Documents/Visual Studio 2015/Projects/Felix_Riipen/Riipen_SSD/Riipen_SSD/Views/Admin/EditContest.cshtml
@@ -4,6 +4,20 @@
     ViewBag.Title = "EditContest";
 }
 
+<style>
+
+    input[type="file"] {
+            display: none;
+    }
+
+    .custom-file-upload {
+        border: 1px solid #ccc;
+        display: inline-block;
+        padding: 6px 12px;
+        cursor: pointer;
+    }
+</style>
+
 
 
 @section scripts{
@@ -12,6 +26,7 @@
 }
 
 <h2>Edit Contest</h2>
+
 
 
 @using (Html.BeginForm(null, null, FormMethod.Post, new { id = "ContestForm" }))
@@ -125,13 +140,15 @@
 
         <label>
             Add teams and judges
-                <input type="file" accept="csv" name="participants" data-val="true" data-val-required="File is required" />
+                <input id="file-upload" type="file" accept="csv" name="participants" data-val="true" data-val-required="File is required" />
+                <label for="file-upload" class="btn btn-primary">Choose File</label>
+
 
 </label>
 
         <div class="form-group">
             <div class="col-md-offset-2 col-md-10">
-                <input type="submit" value="Save" class="btn btn-primary" />
+                <input type="submit" value="Save" class="btn btn-success" />
             </div>
         </div>
     </div>
