Email confirmation, set password fixed as well as redirecting from admin controllers

--- a/Documents/Visual Studio 2015/Projects/Felix_Riipen/Riipen_SSD/Riipen_SSD/Views/Admin/CreateContest.cshtml
+++ b/Documents/Visual Studio 2015/Projects/Felix_Riipen/Riipen_SSD/Riipen_SSD/Views/Admin/CreateContest.cshtml
@@ -74,9 +74,14 @@
                 </div>
             </div>
         </div>
-
+     
         <label for="file-upload" class="btn btn-primary">Upload Participants Using CSV</label>
         <input id="file-upload" accept="csv" type="file" data-val="true" data-val-required="File is required" />
+
+        <label for="file-upload-example">
+            <img src="~/Images/CSV_format.PNG" alt="CSV format" />
+            CSV Format
+        </label>
 
         <div class="multi-field-wrapper">
             <div class="multi-fields participants">
