--- a/Documents/Visual Studio 2015/Projects/Felix_Riipen/Riipen_SSD/Riipen_SSD/Views/Account/SetPassword.cshtml
+++ b/Documents/Visual Studio 2015/Projects/Felix_Riipen/Riipen_SSD/Riipen_SSD/Views/Account/SetPassword.cshtml
@@ -3,7 +3,6 @@
     ViewBag.Title = "Set password";
 }
 
-<h2>@ViewBag.Title.</h2>
 
 @using (Html.BeginForm("SetPassword", "Account", FormMethod.Post, new { @class = "form-horizontal", role = "form" }))
 {
@@ -32,7 +31,7 @@
     </div>
     <div class="form-group">
         <div class="col-md-offset-2 col-md-10">
-            <input type="submit" class="btn btn-default" value="Reset" />
+            <input type="submit" class="btn btn-default" value="Set Password" />
         </div>
     </div>
 }
