change  star to slide for judge

--- a/Documents/Visual Studio 2015/Projects/Felix_Riipen/Riipen_SSD/Riipen_SSD/Styles/Judge_Participant.css
+++ b/Documents/Visual Studio 2015/Projects/Felix_Riipen/Riipen_SSD/Riipen_SSD/Styles/Judge_Participant.css
@@ -164,4 +164,9 @@ footer{
         color:#224965;
         font-weight:bold;
     }
- 
+
+ .side-score{
+    display: inline-block;
+    font-size: 16px;
+    margin-left: 15px;
+ }
