--- a/Documents/Visual Studio 2015/Projects/Felix_Riipen/Riipen_SSD/Riipen_SSD/Views/Judge/contest.cshtml
+++ b/Documents/Visual Studio 2015/Projects/Felix_Riipen/Riipen_SSD/Riipen_SSD/Views/Judge/contest.cshtml
@@ -145,6 +145,12 @@ else if (User.IsInRole("Admin"))
                         else
                         {
                             <span>Waiting for @Html.DisplayFor(modelItem => item.JudgeNotSubmitted) judges</span>
+                            <div>
+                                @foreach(var judgename in item.NamesOfJudgeNotSubmitted)
+                                {
+                                    <span>@judgename</span><br />
+                                }
+                            </div>
                         }
 
 
