--- a/Documents/Visual Studio 2015/Projects/Felix_Riipen/Riipen_SSD/Riipen_SSD/Views/Participant/Contests.cshtml
+++ b/Documents/Visual Studio 2015/Projects/Felix_Riipen/Riipen_SSD/Riipen_SSD/Views/Participant/Contests.cshtml
@@ -63,6 +63,7 @@
                 <th>
                     @Html.DisplayNameFor(model => model.First().JudgeNotSubmitted)
                 </th>
+                <th></th>
 
             </tr>
         </thead>
@@ -99,6 +100,9 @@
                                 }
                             </div>
                         }
+                    </td>
+                    <td>
+                        @Html.ActionLink("View team members", "AllTeamMembersForATeam", new { teamID= item.TeamID})
                     </td>
                 </tr>
             }
