Addd viewable to a contest, only set it to true then partcipants can view the score

--- a/Documents/Visual Studio 2015/Projects/Felix_Riipen/Riipen_SSD/Riipen_SSD/Views/Participant/Contests.cshtml
+++ b/Documents/Visual Studio 2015/Projects/Felix_Riipen/Riipen_SSD/Riipen_SSD/Views/Participant/Contests.cshtml
@@ -86,11 +86,11 @@
 
                     </td>
                     <td>
-                        @if (item.JudgeNotSubmitted == 0)
+                        @if (item.JudgeNotSubmitted == 0 && item.Score!=null)
                         {
                             <span>Final</span>
                         }
-                        else
+                        else if(item.JudgeNotSubmitted!=0)
                         {
                             <span>Waiting for @Html.DisplayFor(modelItem => item.JudgeNotSubmitted) Judges</span>
                             <div>
