Description text overflow.

--- a/Documents/Visual Studio 2015/Projects/Felix_Riipen/Riipen_SSD/Riipen_SSD/Views/Judge/team.cshtml
+++ b/Documents/Visual Studio 2015/Projects/Felix_Riipen/Riipen_SSD/Riipen_SSD/Views/Judge/team.cshtml
@@ -72,7 +72,9 @@
                         </td>
 
                         <td>
-                            @item.Description
+                            <div class="text-overflow">
+
+                            @item.Description </div>
                         </td>
                         <td>
                             @{
