--- a/Documents/Visual Studio 2015/Projects/Felix_Riipen/Riipen_SSD/Riipen_SSD/Styles/Judge_Participant.css
+++ b/Documents/Visual Studio 2015/Projects/Felix_Riipen/Riipen_SSD/Riipen_SSD/Styles/Judge_Participant.css
@@ -170,3 +170,10 @@ footer{
     font-size: 16px;
     margin-left: 15px;
  }
+
+ .text-overflow {
+    width: 10em;
+    white-space: nowrap;
+    overflow: hidden;
+    text-overflow: ellipsis; 
+}
