--- a/Documents/Visual Studio 2015/Projects/Felix_Riipen/Riipen_SSD/Riipen_SSD/Views/Admin/CreateContest.cshtml
+++ b/Documents/Visual Studio 2015/Projects/Felix_Riipen/Riipen_SSD/Riipen_SSD/Views/Admin/CreateContest.cshtml
@@ -51,6 +51,10 @@
             <label for="location">Location</label>
             <input type="text" class="form-control" name="Location" id="location" />
         </div>
+        <div class="publicly-viewable-scores checkbox">
+            <label for="publicly-viewable-scores">Make Scores Publicly Viewable in Real-Time</label>
+            <input type="checkbox" name="PubliclyViewable" value="true" id="publicly-viewable-scores" />
+        </div>
         <div class="multi-field-wrapper">
             <button type="button" class="add-criteria  btn btn-primary"> Add Criteria</button>
             <div class="multi-fields" id="criteria-list">
@@ -76,17 +80,25 @@
         </div>
      
         <label for="file-upload" class="btn btn-primary">Upload Participants Using CSV</label>
-        <input id="file-upload" accept="csv" type="file" data-val="true" data-val-required="File is required" />
+        <input name="participants" id="file-upload" accept="csv" type="file" data-val="true" data-val-required="File is required" />
 
         <label for="file-upload-example">
             <img src="~/Images/CSV_format.PNG" alt="CSV format" />
             CSV Format
         </label>
 
-        <div class="multi-field-wrapper">
-            <div class="multi-fields participants">
-            </div>
-        </div>
+        <table id="participants-table" class="table table-striped table-bordered">
+            <caption>Participants</caption>
+            <thead>
+                <tr>
+                    <td>Team</td>
+                    <td>First Name</td>
+                    <td>Last Name</td>
+                    <td>Email</td>
+                </tr>
+            </thead>
+            <tbody></tbody>
+        </table>
 
         <button type="submit" class="btn btn-success"> Create Contest</button>
     </div>
