--- a/Documents/Visual Studio 2015/Projects/Felix_Riipen/Riipen_SSD/Riipen_SSD/Views/Account/Login.cshtml
+++ b/Documents/Visual Studio 2015/Projects/Felix_Riipen/Riipen_SSD/Riipen_SSD/Views/Account/Login.cshtml
@@ -52,7 +52,7 @@
                     </div>
                 </div>
                 <p>
-                    @Html.ActionLink("Register as a new user", "Register")
+                    @Html.ActionLink("Forgot your password?", "ForgotPassword")
                 </p>
                 @* Enable this once you have account confirmation enabled for password reset functionality
                     <p>
