JudgeController styling for small viewports (<400px width).

--- a/Documents/Visual Studio 2015/Projects/Felix_Riipen/Riipen_SSD/Riipen_SSD/Styles/Judge_Participant.css
+++ b/Documents/Visual Studio 2015/Projects/Felix_Riipen/Riipen_SSD/Riipen_SSD/Styles/Judge_Participant.css
@@ -171,7 +171,7 @@ footer{
  }
 
  .text-overflow {
-    width: 10em;
+    width: 5em;
     white-space: nowrap;
     overflow: hidden;
     text-overflow: ellipsis; 
@@ -211,5 +211,19 @@ footer{
     .side-score {
         font-size: 120%;
     }
+
+     .text-overflow-small {
+    width: 8em;
+    white-space: nowrap;
+    overflow: hidden;
+    text-overflow: ellipsis; 
+}
+
+    .text-overflow-large {
+    width: 16em;
+    white-space: nowrap;
+    overflow: hidden;
+    text-overflow: ellipsis; 
+}
 
 }
