--- a/Documents/Visual Studio 2015/Projects/Felix_Riipen/Riipen_SSD/Riipen_SSD/Views/Judge/team.cshtml
+++ b/Documents/Visual Studio 2015/Projects/Felix_Riipen/Riipen_SSD/Riipen_SSD/Views/Judge/team.cshtml
@@ -72,7 +72,7 @@
                         </td>
 
                         <td>
-                            <div class="text-overflow">
+                            <div class="text-overflow-large">
 
                             @item.Description </div>
                         </td>
